2009-08-30  Nick Roberts  <nickrob@snap.net.nz>

	* process.c (wait_reading_process_output): Keep the descriptor
	when pty is used by a non-child process, e.g., in I/O buffer of
	GDB this allows inferior to be restarted.

2009-08-29  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (redisplay_internal): Remove redundant test and collapse
	both branches into one.

2009-08-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs.c (USAGE1): Remove --(no-)multibyte, --(no-)unibyte.
	(main): Use enable-multibyte-characters rather than
	default-enable-multibyte-characters.  Output a warning message when
	running a unibyte session.

2009-08-28  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* unexmacosx.c (print_load_command_name) [LC_DYLD_INFO]: Add cases
	LC_DYLD_INFO and LC_DYLD_INFO_ONLY.
	(copy_data_segment): Also copy __program_vars section.
	(copy_dyld_info) [LC_DYLD_INFO]: New function.
	(dump_it) [LC_DYLD_INFO]: Use it.

	* s/darwin.h [temacs]: Undef HAVE_POSIX_MEMALIGN.

2009-08-28  Eli Zaretskii  <eliz@gnu.org>

	* makefile.w32-in ($(BLD)/doc.$(O)): Depend on buildobj.h, not on
	$(SRC)/buildobj.h.
	(buildobj.h): Renamed from $(SRC)/buildobj.h.
	(make-buildobj-CMD, make-buildobj-SH): Create buildobj.h, not
	$(SRC)/buildobj.h.
	(clean): Add buildobj.h.

2009-08-28  Teodor Zlatanov  <tzz@lifelogs.com>

	* print.c (print_object): Set escapeflag to 1 when printing
	hashtable keys and values.

2009-08-27  Stefan Monnier  <monnier@iro.umontreal.ca>

	* lread.c (read_integer): Use doubles (and potentially return a float
	number) as we do in string-to-number.
	(read1): Use strtol to read integers, signal errors on strtol's
	overflow and use floats if strtol's output is too large for
	Elisp integers.

2009-08-27  Eli Zaretskii  <eliz@gnu.org>

	* makefile.w32-in ($(SRC)/buildobj.h, make-buildobj-CMD)
	(make-buildobj-SH): Fix last change.
	(SRC): Move to before where it's first used.

2009-08-27  Kenichi Handa  <handa@m17n.org>
